# programming

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  cmake_format.yaml  doxygen_config
.devcontainer/: Dockerfile  (+2 more)
cpp/: CMakeLists.txt  bind.cpp  crtp.cpp  inheritance.cpp  intrusive_container.cpp  main.cpp  map_updater.cpp  myshared_ptr.cpp  myunique_ptr.cpp  perfect_forward.cpp  sfinae.cpp  templates.cpp  variadic_templates.cpp
cpp/algs/: binary_search.cpp  binary_tree.cpp  bubble_sort.cpp  cache_func.cpp  dynamic_programming_1d.cpp  graph_search.cpp  hash_table.cpp  heap.cpp  linear_search.cpp  linked_list.cpp  quicksort.cpp  recursion.cpp  selection_sort.cpp  trees.cpp
cpp/bloaty/: patterns.bloaty  run_bloaty.sh
cpp/concurency_in_action/: args.cpp  background_task.cpp  edit_document.cpp  parallel_accumulate.cpp  scoped_thread.cpp  thread_guard.cpp
cpp/cpp11/: aliasing_nullptr_enumclass.cpp  auto.cpp  decltype.cpp  initializer_lists.cpp  inline_namespaces.cpp  lambda_expressions.cpp  move_semantics.cpp
cpp/cpp11/language/: aliasing_nullptr_enumclass.cpp  attributes_constexpr_delegatesctor.cpp  auto.cpp  converting_ctor.cpp  decltype.cpp  initializer_lists.cpp  inline_namespaces.cpp  lambda_expressions.cpp  member_func_qualifiers.cpp  move_forward_rvalue_ref.cpp  move_semantics.cpp  nonstatic_initializers.cpp  override_final_default_delete.cpp  range_based_loop.cpp  trailing_return_type.cpp  variadic_templates.cpp
cpp/cpp14/language/: constexpr_templates_deprecated.cpp  literals_lambda.cpp  type_deduction_decltype_auto.cpp
cpp/cpp17/language/: auto_lambda.cpp  folding_expressions.cpp  nested_namespaces  nested_namespaces.cpp  nodiscard.cpp  structured_bindings  structured_bindings.cpp  template_arg_deduction.cpp
cpp/cppcoreguidelines/: notes.md
cpp/dsa/: backtracking.cpp  cache_func.cpp  depth_first_search.cpp  doubly_linked_list.cpp  dynamic_array.cpp  dynamic_programming_1d.cpp  graph_search.cpp  hash_map.cpp  hash_table.cpp  insertion_sort.cpp  linear_search.cpp  linked_list.cpp  memoization.cpp  merge_sort.cpp  queue.cpp  quick_sort.cpp  recursion.cpp  selection_sort.cpp  singly_linked_list.cpp  sliding_window_fixed_size.cpp  stack.cpp  static_array  static_array.cpp  trees.cpp  trie.cpp
cpp/exception_handler/: CMakeLists.txt  README.md
cpp/exception_handler/src/: exception_handler.cpp
cpp/exception_safety/: exception_handler.cpp  exception_safe_vector.cpp  simple_vector_v1.cpp  simple_vector_v2.cpp  simple_vector_v3.cpp
cpp/gbenchmark/: CMakeLists.txt  main.cpp
cpp/gst/: notes.md
cpp/gtest/: CMakeLists.txt  bad_entry_analyzer.cpp  dep_inv_entry_analyzer.cpp  extract_and_override_entry_analyzer.cpp  main.cpp  mock.cpp  mock_timer.cpp  unittest.cpp
cpp/leetcode/: 13_roman_to_integer.cpp  1_two_sum.cpp  2_palindrome.cpp  add_binary.cpp  remove_nth_element_in_list.cpp  reorder_list.cpp
cpp/libs/: five.cpp  four.cpp  sum.cpp
cpp/memory_monitor/: mem.sh
cpp/multithreading/: async.cpp  condition_variable  condition_variable.cpp  custom_mutex.cpp  deadlock.cpp  exception  exception.cpp  future.cpp  lock.cpp  lock_guard.cpp  mutex.cpp  promise.cpp  pubsub.cpp  race_condition.cpp  thread  thread.cpp  threadpool.cpp  unique_lock.cpp
cpp/oop/: CMakeLists.txt
cpp/oop/include/: circle.h  figure.h  person.h  rectangle.h
cpp/oop/src/: circle.cpp  figure.cpp  person.cpp
cpp/profiling/: factorial.cpp  memory_leak.cpp  notes.md
cpp/qt/: CMakeLists.txt  qt.cpp
cpp/questions/: associative_containers_requirements.cpp  circle_ref_shared_ptr.cpp  const.cpp  crtp.cpp  ctor_exception.cpp  exceptions.cpp  finam_virtual.cpp  inheritance.cpp  inheritance_method.cpp  intrusive_container.cpp  lambdas.cpp  move_forward.cpp  myshared_ptr.cpp  other.cpp  pimpl.cpp  polymorphism.cpp  pure_virtual_function_call.cpp  sber.cpp  sber_devices_algo.cpp  sber_devices_multitreading.cpp  sizeof.cpp  task1.cpp  task2_answer.cpp  task2_ref.cpp  templates.cpp  unordered_set_requirements.cpp  virtual1.cpp  virtual2.cpp  virtual_dctor.cpp  vk_algo.cpp  vtable.cpp
cpp/software_design/clean_arch/: main.cpp
cpp/software_design/ood/: bank.cpp  blackjack.cpp  connect_four  connect_four.cpp
cpp/software_design/solid/: dip_bad.cpp  dip_good.cpp  isp_bad.cpp  isp_good.cpp  lsp_bad.cpp  lsp_good.cpp  ocp_bad.cpp  ocp_good.cpp  sip_bad  sip_bad.cpp  sip_good.cpp
cpp/static_analysis/: .clang-tidy  install_clang_tidy.sh  run-clang-tidy.py  run_clang_tidy.py  run_clang_tidy.sh
cpp/static_analysis/example/: CMakeLists.txt
cpp/static_analysis/example/src/: main.cpp
cpp/testdata/: cloud.pcd  cropped.pcd
dsa/: CMakeLists.txt
dsa/cpp/: binary_search.cpp  binary_search_tree.cpp  breath_first_search.cpp  bubble_sort.cpp  bucket_sort.cpp  depth_first_search.cpp  linear_search.cpp  sliding_window_variable_size.cpp  static_array.cpp  trees.cpp
dsa/python3/: astar.py  binary_search.py  binary_search_tree.py  breadth_first_search.py  bubble_sort.py  dijkstra.py  fast_slow_pointers.py  graph_adj_list.py  hash_set.py  kadanes.py  linear_search.py  matrix_bfs.py  matrix_dfs.py  permutations.py  prefix_sum.py  prim.py  quick_sort.py  segment_tree.py  subsets.py  topological_sort.py  tree.py  union_find.py
low_level_design/game_catalog/: CMakeLists.txt  README
low_level_design/game_catalog/include/: IGame.h  registry.h
low_level_design/game_catalog/include/tictactoe/: IPlayer.h  board.h  bot.h  game.h  player.h
low_level_design/game_catalog/src/: main.cpp
low_level_design/game_catalog/src/tictactoe/: bot.cpp  game.cpp  player.cpp
low_level_design/game_catalog/test/: CMakeLists.txt  main.cpp  tictactoe_test.cpp
low_level_design/snake_and_ladder/: CMakeLists.txt  README.md
low_level_design/snake_and_ladder/src/: main.cpp
low_level_design/snake_and_ladder/test/: CMakeLists.txt  game_test.cpp  main.cpp
robotics/sfm/: CMakeLists.txt  README.md
robotics/sfm/data/: K.txt
robotics/sfm/include/: visual_odom_mono.h
robotics/sfm/src/: ba_example.cpp  kitti_ba_testbench.cpp  kitti_vo_testbench.cpp  visual_odom_mono.cpp
(+195 files in other folders)
